--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ build/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
+**/target
 
 ### STS ###
 .apt_generated
@@ -38,3 +39,5 @@ out/
 
 ### Kotlin ###
 .kotlin
+
+
