--- a/module-app/src/main/resources/application-local.yml
+++ b/module-app/src/main/resources/application-local.yml
@@ -9,8 +9,8 @@ spring:
       path: /h2-console
   datasource:
     driverClassName: org.h2.Driver
-    #url: jdbc:h2:file:./target/h2db/db/application;DB_CLOSE_DELAY=-1
-    url: jdbc:h2:mem:testdb;MODE=MYSQL;DATABASE_TO_UPPER=false;DB_CLOSE_DELAY=-1
+    url: jdbc:h2:file:./target/h2db/db/application;MODE=MYSQL;DATABASE_TO_UPPER=false;DB_CLOSE_DELAY=-1
+#    url: jdbc:h2:mem:testdb;MODE=MYSQL;DATABASE_TO_UPPER=false;DB_CLOSE_DELAY=-1
     username: sa
     password:
 
@@ -28,3 +28,6 @@ spring:
     hibernate:
       ddl-auto: none
     show-sql: true
+  redis:
+    host: localhost
+    port: 6379
