--- a/.github/workflows/notification.yml
+++ b/.github/workflows/notification.yml
@@ -45,11 +45,11 @@ jobs:
           -d '{
               "embeds": [{
                 "title": "**CI/CD Pipeline Notification**",
-                "description": "**Repository**: ${{ github.repository }}\n
-                               **Branch**: ${{ github.ref }}\n
-                               **Event**: ${{ github.event_name }}\n
-                               **Push Time**: ${{ github.event.head_commit.timestamp }}\n
-                               **Commit Message**: ${{ github.event.head_commit.message }}\n
+                "description": "**Repository**: ${{ github.repository }}
+                               **Branch**: ${{ github.ref }}
+                               **Event**: ${{ github.event_name }}
+                               **Push Time**: ${{ github.event.head_commit.timestamp }}
+                               **Commit Message**: ${{ github.event.head_commit.message }}
                                **Status**: ${{ job.status }}",
                 "color": '${STATUS_COLOR}'
               }]
