--- a/.github/workflows/notification.yml
+++ b/.github/workflows/notification.yml
@@ -51,7 +51,7 @@ jobs:
                                  **Push Time**: ${{ github.event.head_commit.timestamp }}\n
                                  **Commit Message**: ${{ github.event.head_commit.message }}\n
                                  **Status**: ${{ job.status }}\",
-                \"color\": $STATUS_COLOR
+                \"color\": \"$STATUS_COLOR\"
               }]
           }" \
           ${{ secrets.DISCORD_WEBHOOK_URL }}
