--- a/.github/workflows/notification.yml
+++ b/.github/workflows/notification.yml
@@ -41,5 +41,5 @@ jobs:
         run: |
           curl -H "Content-Type: application/json" \
           -X POST \
-          -d "{\"content\": \" ::::: Event Notification ::::: Build status: ${{ job.status }}\"}" \
+          -d "{\"content\": \" ::::: Event Notification ::::: \n Build status: ${{ job.status }}\"}" \
           ${{ secrets.DISCORD_WEBHOOK_URL }}
