--- a/.github/workflows/notification.yml
+++ b/.github/workflows/notification.yml
@@ -41,8 +41,7 @@ jobs:
         run: |
           curl -H "Content-Type: application/json" \
           -X POST \
-          -d "{\"content\": \
-            \" ::::: Event Notification ::::: \n \
-            1.Build status: ${{ job.status }}\" \
-          }" \
+          -d "{\"content\": \" ::::: Event Notification ::::: \
+          \n ::: Build status : ${{ job.status }} /
+          \"}" \
           ${{ secrets.DISCORD_WEBHOOK_URL }}
