--- a/.github/workflows/notification.yml
+++ b/.github/workflows/notification.yml
@@ -42,11 +42,11 @@ jobs:
           curl -H "Content-Type: application/json" \
           -X POST \
           -d "{\"content\": \" ::::: Event Notification ::::: \
-                            \n 1.Repository: ${{ github.repository }} \
-                            \n 2.Branch: ${{ github.ref }} \
-                            \n 3.Event Type: ${{ github.event_name }} \
-                            \n 4.Event Time: ${{ github.event.head_commit.timestamp }} \
-                            \n 5.Commit Message: ${{ github.event.head_commit.message }} \
-                            \n 6.Job Status : ${{ job.status }} \
+                            \n [Repository]: ${{ github.repository }} \
+                            \n [Branch]: ${{ github.ref }} \
+                            \n [Event Type]: ${{ github.event_name }} \
+                            \n [Event Time]: ${{ github.event.head_commit.timestamp }} \
+                            \n [Commit Message]: ${{ github.event.head_commit.message }} \
+                            \n [Job Status] : ${{ job.status }} \
           \"}" \
           ${{ secrets.DISCORD_WEBHOOK_URL }}
