--- a/.github/workflows/notification.yml
+++ b/.github/workflows/notification.yml
@@ -6,7 +6,7 @@ name: Notification
 on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
-    branches: [ "feature/discord-notification", "feature/pr-test"]
+    branches: [ "feature/discord-notification"]
   pull_request:
     branches: [ "feature/pr-test" ]
 
