--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,34 +32,44 @@ jobs:
         run: |
           echo Add other actions to build,
           echo test, and deploy your project.
-      # Discord Webhook notification
-      - name: Send Discord Notification
-        if: always() # 실행 성공/실패 상관없이 알림을 보냄
-        run: |
-          # Determine color based on job status
-          STATUS_COLOR=$([[ "${{ job.status }}" == "success" ]] && echo "3066993" || echo "15158332")
 
-          # Extract branch name from ref
-          BRANCH_NAME=$(echo "${{ github.ref }}" | sed 's|refs/heads/||')
+      - name: Set up JDK
+        uses: actions/setup-java@v3
+        with:
+          java-version: '21'
+          distribution: 'temurin'
+
+      - name: Make Gradle wrapper executable
+        run: chmod +x ./gradlew
+
+      - name: Build application with Gradle
+        run: ./gradlew clean build
+
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.AWS_REGION }}
+
+      - name: Log in to Amazon ECR
+        id: login-ecr
+        uses: aws-actions/amazon-ecr-login@v2
+        with:
+          region: ${{ secrets.AWS_REGION }}
+
+      - name: Build, tag, and push image to ECR
+        run: |
+          IMAGE_NAME=innergrim-service-api
+          IMAGE_TAG=latest
+          REPOSITORY_URI=147997147328.dkr.ecr.ap-northeast-2.amazonaws.com/innergrim/service-api
           
-          ISSUE_LINK="https://github.com/${{ github.repository }}/commit/${{ github.sha }}"
-          TITLE="::::: Push Notification :::::"
-          DESCRIPTION="**Event Time**: ${{ github.event.head_commit.timestamp }}\n \
-                        **Event Type**: ${{ github.event_name }}\n \
-                        **Repository**: ${{ github.repository }}\n \
-                        **Branch**: $BRANCH_NAME\n \
-                        **Commit Message**: ${{ github.event.head_commit.message }}\n \
-                        **Job Status**: ${{ job.status }}"
+          # Build Docker image with a local name
+          docker build -t $IMAGE_NAME:$IMAGE_TAG -f .docker/Dockerfile .
           
-          curl -H "Content-Type: application/json" \
-          -X POST \
-          -d "{\"embeds\": [{ \
-              \"title\": \"$TITLE\", \
-              \"description\": \"$DESCRIPTION\", \
-              \"color\": $STATUS_COLOR, \
-              \"url\": \"$ISSUE_LINK\", \
-              \"footer\": { \
-                \"text\": \"Click the link above to view the details.\" \
-              } \
-          }]}" \
-          ${{ secrets.DISCORD_WEBHOOK_URL }}
+          # Tag the image with the ECR repository URI
+          docker tag $IMAGE_NAME:$IMAGE_TAG $REPOSITORY_URI:$IMAGE_TAG
+          
+          # Push the image to ECR
+          docker push $REPOSITORY_URI:$IMAGE_TAG
+          
