--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -45,31 +45,30 @@ jobs:
       - name: Build application with Gradle
         run: ./gradlew clean build
 
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v2
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ secrets.AWS_REGION }}
+      - name: Build Docker image
+        run: docker build -t innergrim-service-api:latest -f .docker/Dockerfile .
 
-      - name: Log in to Amazon ECR
-        id: login-ecr
-        uses: aws-actions/amazon-ecr-login@v2
-        with:
-          region: ${{ secrets.AWS_REGION }}
+      - name: Save Docker image to a tar file
+        run: docker save innergrim-service-api:latest | gzip > innergrim-service-api.tar.gz
 
-      - name: Build, tag, and push image to ECR
+      - name: Upload Docker image tar as an artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: docker-image
+          path: innergrim-service-api.tar.gz
+
+      - name: Deploy to EC2
         run: |
-          IMAGE_NAME=innergrim-service-api
-          IMAGE_TAG=latest
-          REPOSITORY_URI=147997147328.dkr.ecr.ap-northeast-2.amazonaws.com/innergrim/service-api
+          # Save the SSH key to a temporary file
+          echo "${{ secrets.EC2_SSH_KEY }}" > /tmp/id_rsa
+          chmod 600 /tmp/id_rsa
           
-          # Build Docker image with a local name
-          docker build -t $IMAGE_NAME:$IMAGE_TAG -f .docker/Dockerfile .
+          scp -o StrictHostKeyChecking=no -i /tmp/id_rsa innergrim-service-api.tar.gz ec2-user@3.39.72.21:/home/ec2-user
+          ssh -o StrictHostKeyChecking=no -i /tmp/id_rsa ec2-user@3.39.72.21 << 'EOF' 
           
-          # Tag the image with the ECR repository URI
-          docker tag $IMAGE_NAME:$IMAGE_TAG $REPOSITORY_URI:$IMAGE_TAG
-          
-          # Push the image to ECR
-          docker push $REPOSITORY_URI:$IMAGE_TAG
-          
+          gzip -d /home/ec2-user/innergrim-service-api.tar.gz
+          docker load < /home/ec2-user/innergrim-service-api.tar
+          docker stop innergrim-service-api || true
+          docker rm innergrim-service-api || true
+          docker run -d --name innergrim-service-api -p 8080:8080 innergrim-service-api:latest
+          EOF
