[CHG] dev db user

--- a/module-app/src/main/resources/application-dev.yml
+++ b/module-app/src/main/resources/application-dev.yml
@@ -10,8 +10,8 @@ spring:
   datasource:
     driverClassName: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://develop.c5aa8aa4iy5s.ap-northeast-2.rds.amazonaws.com:3306
-    username:
-    password:
+    username: innergrim-user
+    password: user12#$
     hikari:
       minimum-idle: 5                      # 최소 유지할 커넥션 수
       maximum-pool-size: 10                # 최대 커넥션 수
