--- a/module-app/src/main/resources/application-local.yml
+++ b/module-app/src/main/resources/application-local.yml
@@ -39,10 +39,15 @@ spring:
   redis:
     host: localhost
     port: 6379
+  servlet:
+    multipart:
+      enabled: true
+      max-file-size: 10MB
+      max-request-size: 10MB
 
 logging:
   level:
-    root: INFO                   # 전체 애플리케이션의 기본 로그 레벨
+    root: DEBUG                  # 전체 애플리케이션의 기본 로그 레벨
     com.team.innergrim: DEBUG    # 특정 패키지의 로그 레벨
   pattern:
     console: "%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n"  # 콘솔 로그 출력 형식
