--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -70,5 +70,9 @@ jobs:
           docker load < /home/ec2-user/innergrim-service-api.tar
           docker stop innergrim-service-api || true
           docker rm innergrim-service-api || true
-          docker run -d --name innergrim-service-api -p 8080:8080 -e "SPRING_PROFILES_ACTIVE=dev" innergrim-service-api:latest
+          docker run -d --name innergrim-service-api -p 8080:8080 \
+            -e "SPRING_PROFILES_ACTIVE=dev" \
+            -e "AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}" \
+            -e "AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}" \
+            innergrim-service-api:latest
           EOF
