--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -74,5 +74,6 @@ jobs:
             -e "SPRING_PROFILES_ACTIVE=dev" \
             -e "AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}" \
             -e "AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}" \
+            -e "AWS_REGION=${{ secrets.AWS_REGION }}" \
             innergrim-service-api:latest
           EOF
