--- a/module-app/src/main/resources/application-dev.yml
+++ b/module-app/src/main/resources/application-dev.yml
@@ -1,6 +1,6 @@
 
 # DB 종류
-database: mysql
+profile: dev
 
 spring:
   h2:
@@ -23,8 +23,8 @@ spring:
   sql:
     # DB초기화(schema.sql, data.sql) , [always : 기동 시 매번 동작, never : 기동 시 동작하지 않음]
     init:
-      schema-locations: classpath*:initdata/${database}/schema.sql
-      data-locations: classpath*:initdata/${database}/data.sql
+      schema-locations: classpath*:initdata/${profile}/schema.sql
+      data-locations: classpath*:initdata/${profile}/data.sql
       #schema-locations: classpath*:initdata/h2db/schema.sql
       #data-locations: classpath*:initdata/h2db/data.sql
       mode: always
