--- a/module-app/src/main/resources/application-local.yml
+++ b/module-app/src/main/resources/application-local.yml
@@ -1,5 +1,5 @@
 # DB 종류
-database: h2db
+profile: local
 
 spring:
   config:
@@ -27,8 +27,8 @@ spring:
   sql:
     # DB초기화(schema.sql, data.sql) , [always : 기동 시 매번 동작, never : 기동 시 동작하지 않음]
     init:
-      schema-locations: classpath*:initdata/${database}/schema.sql
-      data-locations: classpath*:initdata/${database}/data.sql
+      schema-locations: classpath*:initdata/${profile}/schema.sql
+      data-locations: classpath*:initdata/${profile}/data.sql
       #schema-locations: classpath*:initdata/h2db/schema.sql
       #data-locations: classpath*:initdata/h2db/data.sql
       mode: always
