--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -60,11 +60,11 @@ jobs:
       - name: Deploy to EC2
         run: |
           # Save the SSH key to a temporary file
-          echo "${{ secrets.EC2_SSH_KEY }}" > /tmp/id_rsa
+          echo "${{ secrets.DEV_AWS_EC2_SSH_KEY }}" > /tmp/id_rsa
           chmod 600 /tmp/id_rsa
           
-          scp -o StrictHostKeyChecking=no -i /tmp/id_rsa innergrim-service-api.tar ec2-user@${{ secrets.EC2_HOST }}:/home/ec2-user
-          ssh -o StrictHostKeyChecking=no -i /tmp/id_rsa ec2-user@${{ secrets.EC2_HOST }} << 'EOF' 
+          scp -o StrictHostKeyChecking=no -i /tmp/id_rsa innergrim-service-api.tar ec2-user@${{ secrets.DEV_AWS_EC2_HOST }}:/home/ec2-user
+          ssh -o StrictHostKeyChecking=no -i /tmp/id_rsa ec2-user@${{ secrets.DEV_AWS_EC2_HOST }} << 'EOF' 
           
           docker rmi -f innergrim-service-api || true
           docker load < /home/ec2-user/innergrim-service-api.tar
@@ -72,8 +72,8 @@ jobs:
           docker rm innergrim-service-api || true
           docker run -d --name innergrim-service-api --network service-network -p 8080:8080 \
             -e "SPRING_PROFILES_ACTIVE=dev" \
-            -e "AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}" \
-            -e "AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}" \
+            -e "AWS_ACCESS_KEY_ID=${{ secrets.DEV_AWS_ACCESS_KEY }}" \
+            -e "AWS_SECRET_ACCESS_KEY=${{ secrets.DEV_AWS_ACCESS_SECRET }}" \
             -e "AWS_REGION=${{ secrets.AWS_REGION }}" \
             innergrim-service-api:latest
           EOF
