[CHG] 모듈명 변경

--- a/.docker/Dockerfile
+++ b/.docker/Dockerfile
@@ -5,7 +5,7 @@ FROM openjdk:21-jdk-slim
 WORKDIR /app
 
 # Copy the JAR file to the container
-COPY ../module-app/build/libs/module-app-0.0.1-SNAPSHOT.jar /app/module-app-0.0.1-SNAPSHOT.jar
+COPY ../module-api/build/libs/module-api-0.0.1-SNAPSHOT.jar /app/module-api-0.0.1-SNAPSHOT.jar
 
 # Specify the command to run your app
-ENTRYPOINT ["java", "-jar", "/app/module-app-0.0.1-SNAPSHOT.jar"]
+ENTRYPOINT ["java", "-jar", "/app/module-api-0.0.1-SNAPSHOT.jar"]
