--- a/.github/workflows/deploy-prd.yml
+++ b/.github/workflows/deploy-prd.yml
@@ -70,7 +70,7 @@ jobs:
           docker load < /home/ec2-user/innergrim-service-api.tar
           docker stop innergrim-service-api || true
           docker rm innergrim-service-api || true
-          docker run -d --name innergrim-service-api --network service-network -p 8080:8080 \
+          docker run --restart always -d --name innergrim-service-api --network service-network -p 8080:8080 \
             -e "SPRING_PROFILES_ACTIVE=prd" \
             -e "AWS_ACCESS_KEY_ID=${{ secrets.PRD_AWS_ACCESS_KEY }}" \
             -e "AWS_SECRET_ACCESS_KEY=${{ secrets.PRD_AWS_ACCESS_SECRET }}" \
