--- a/module-api/src/main/resources/application-prd.yml
+++ b/module-api/src/main/resources/application-prd.yml
@@ -63,3 +63,6 @@ logging:
 aws:
   image-url: https://prd-innergrim.s3.ap-northeast-2.amazonaws.com
   bucket: prd-innergrim
+
+chatbot:
+  base-url: http://innergrim-chatbot:8000
