--- a/module-api/src/main/resources/application-local.yml
+++ b/module-api/src/main/resources/application-local.yml
@@ -47,6 +47,8 @@ spring:
       enabled: true
       max-file-size: 10MB
       max-request-size: 10MB
+  batch:
+    initialize-schema: always
 
 logging:
   level:
