--- a/module-api/src/main/resources/application-prd.yml
+++ b/module-api/src/main/resources/application-prd.yml
@@ -10,10 +10,10 @@ spring:
       enabled: false
       path: /h2-console
   datasource:
-    url: jdbc:mysql://prd-innergrim.crw4aaosevc0.ap-northeast-2.rds.amazonaws.com:3306/innergrim
-    username: innergrim-user
-    password: innergrim12#$
     driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://prd-innergrim.crw4aaosevc0.ap-northeast-2.rds.amazonaws.com:3306/innergrim
+    username: ${datasource.username}
+    password: ${datasource.password}
     hikari:
       minimum-idle: 5                      # 최소 유지할 커넥션 수
       maximum-pool-size: 10                # 최대 커넥션 수
@@ -27,9 +27,7 @@ spring:
     init:
       schema-locations: classpath*:initdata/${profile}/schema.sql
       data-locations: classpath*:initdata/${profile}/data.sql
-      #schema-locations: classpath*:initdata/h2db/schema.sql
-      #data-locations: classpath*:initdata/h2db/data.sql
-      mode: always
+      mode: never
   jpa:
     #jpa 사용 환경에서 data.sql을 정상적으로 동작하게 하는 옵션
     defer-datasource-initialization: true
@@ -45,20 +43,6 @@ spring:
       enabled: true
       max-file-size: 10MB
       max-request-size: 10MB
-
-logging:
-  level:
-    root: INFO                  # 전체 애플리케이션의 기본 로그 레벨
-    com.team.innergrim: DEBUG    # 특정 패키지의 로그 레벨
-  pattern:
-    console: "%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n"  # 콘솔 로그 출력 형식
-  file:
-    name: logs/application.log   # 로그 파일 위치
-  logback:
-    rollingpolicy:
-      file-name-pattern: logs/application-%d{yyyy-MM-dd}.%i.log.gz  # 로그 파일을 일별로 압축하여 보관
-      max-history: 30            # 최대 30일치의 로그 파일 유지
-      max-file-size: 10MB        # 하나의 로그 파일의 최대 크기
 
 aws:
   s3:
