--- a/module-api/src/main/resources/application-dev.yml
+++ b/module-api/src/main/resources/application-dev.yml
@@ -25,7 +25,7 @@ spring:
   sql:
     # DB초기화(schema.sql, data.sql) , [always : 기동 시 매번 동작, never : 기동 시 동작하지 않음]
     init:
-      schema-locations: classpath*:initdata/${profile}/schema.sql
+      schema-locations: classpath*:initdata/${profile}/schema.sql, classpath*:initdata/${profile}/schema-batch.sql
       data-locations: classpath*:initdata/${profile}/data.sql
       #schema-locations: classpath*:initdata/h2db/schema.sql
       #data-locations: classpath*:initdata/h2db/data.sql
